Switched to the Aufs 3.14.40+ branch

--- a/kernel-kit/build.conf
+++ b/kernel-kit/build.conf
@@ -33,7 +33,7 @@ kernel_mirror="http://www.kernel.org/pub/linux/kernel/v3.0/"
 aufs_git=git://git.code.sf.net/p/aufs/aufs3-standalone
 
 # This is only for new kernels, leave blank if not using bleeding edge RC
-#aufsv=
+aufsv=3.14.40+
 #aufsv=3.x-rcN
 #SPECIAL NOTE. LTS 3.10X kernels past 3.10.25 need this set with 'aufsv=3.10.x' 
 #SPECIAL NOTE. LTS 3.14X kernels past 3.14.40 need this set with 'aufsv=3.14.40+'
