Dropped the kernel version suffix

--- a/kernel-kit/build.conf
+++ b/kernel-kit/build.conf
@@ -11,7 +11,7 @@ package_name_suffix=52-librepup-i686
 # if you don't leave empty the leading "dash" is required
 # example:
 #custom_suffix=-4G
-custom_suffix=-52librepup
+custom_suffix=
 
 # this is the version of the vanilla kernel, usually latest is best
 # or follow an LTS branch 
